--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "vuex": "^3.1.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "autoprefixer": "^7.1.2",
     "axios": "^0.19.0",
     "babel-core": "^6.22.1",
@@ -36,13 +37,9 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "bootstrap": "^4.3.1",
-    "chartist": "^0.11.0",
     "bootstrap-vue": "^2.0.0-rc.28",
-    "vue2-google-maps": "^0.8.4",
-    "google-maps": "^3.2.1",
-    "register-service-worker": "^1.5.2",
-    "v-tooltip": "^2.0.0-rc.33",
     "chalk": "^2.0.1",
+    "chartist": "^0.11.0",
     "chromedriver": "^2.27.2",
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
@@ -59,6 +56,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "google-maps": "^3.2.1",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
@@ -78,17 +76,20 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "register-service-worker": "^1.5.2",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "v-tooltip": "^2.0.0-rc.33",
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.3.0",
     "vue-resource": "^1.5.1",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "vue2-google-maps": "^0.8.4",
     "vuejs-paginate": "^2.1.0",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
