--- a/backend-V2/package.json
+++ b/backend-V2/package.json
@@ -14,13 +14,16 @@
     "bootstrap": "^4.0.0",
     "chartist": "^0.11.0",
     "es6-promise": "^4.2.4",
+    "luxon": "^1.21.3",
     "vue": "^2.6.10",
     "vue-clickaway": "^2.1.0",
+    "vue-datetime": "^1.0.0-beta.11",
     "vue-notifyjs": "^0.3.0",
     "vue-router": "^3.0.1",
     "vue-select": "^3.4.0",
     "vue-truncate-filter": "^1.1.7",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "weekstart": "^1.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
