--- a/backend-V2/package.json
+++ b/backend-V2/package.json
@@ -17,10 +17,12 @@
     "luxon": "^1.21.3",
     "vue": "^2.6.10",
     "vue-clickaway": "^2.1.0",
+    "vue-cookies": "^1.6.1",
     "vue-datetime": "^1.0.0-beta.11",
     "vue-notifyjs": "^0.3.0",
     "vue-router": "^3.0.1",
     "vue-select": "^3.4.0",
+    "vue-sessionstorage": "^1.0.0",
     "vue-sidebar-menu": "^4.4.6",
     "vue-truncate-filter": "^1.1.7",
     "vuex": "^3.1.2",
